Change scope package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pay/vnptpay",
+  "name": "@npay/vnptpay",
   "version": "1.0.0",
   "description": "Vnpt Pay Client",
   "author": "Vu Duc Dung <ducdung8491@gmail.com>"
